--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+wmc
 # Created by https://www.toptal.com/developers/gitignore/api/linux,archlinuxpackages,vim,latex
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,archlinuxpackages,vim,latex
 
